Fixed dropdown bug in My Tasks. Added overflow:visible for .panel-body.mytask

--- a/Content/new/css/main.css
+++ b/Content/new/css/main.css
@@ -1599,13 +1599,18 @@ input[type="*"]::placeholder {
   padding-top: 35px;
 }
 
+/* line 25, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+.panel-body.my-task, .my-task.panel-body--kanban {
+  overflow: visible;
+}
+
 /*Priority color markers*/
-/* line 27, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 31, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .priority {
   /*for checkbox/switch colors*/
 }
 
-/* line 29, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 33, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .priority-blue {
   border-left: 10px solid #80d3f9;
   border-top: 0;
@@ -1613,7 +1618,7 @@ input[type="*"]::placeholder {
   border-right: 0;
 }
 
-/* line 33, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 37, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .priority-red {
   border-left: 10px solid #f6a8a6;
   border-top: 0;
@@ -1621,7 +1626,7 @@ input[type="*"]::placeholder {
   border-right: 0;
 }
 
-/* line 36, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 40, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .priority-yellow {
   border-left: 10px solid #fff498;
   border-top: 0;
@@ -1629,7 +1634,7 @@ input[type="*"]::placeholder {
   border-right: 0;
 }
 
-/* line 40, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 44, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .priority-green {
   border-left: 10px solid #b1dcb3;
   border-top: 0;
@@ -1637,44 +1642,44 @@ input[type="*"]::placeholder {
   border-right: 0;
 }
 
-/* line 43, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 47, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .priority-th {
   border-left: 10px solid transparent;
   /*hack for margin of 1st column of table header*/
 }
 
-/* line 48, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 52, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .priority-vip {
   background-color: #80d3f9;
 }
 
-/* line 51, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 55, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .priority-high {
   background-color: #f6a8a6;
 }
 
-/* line 54, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 58, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .priority-medium {
   background-color: #fff498;
 }
 
-/* line 57, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 61, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .priority-low {
   background-color: #b1dcb3;
 }
 
 /*accordion/collapse content*/
-/* line 65, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 69, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .property-sec-hdr {
   padding-top: 5px;
 }
 
-/* line 66, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 70, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .property-sec-hdr li a {
   font-size: 1.3em;
 }
 
-/* line 69, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 73, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .accordion-toggle:after {
   /* symbol for "opening" panels */
   font-family: 'FontAwesome';
@@ -1689,7 +1694,7 @@ input[type="*"]::placeholder {
   width: 20px;
 }
 
-/* line 78, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 82, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .accordion-toggle.collapsed:after {
   /* symbol for "collapsed" panels */
   content: "\f054";
@@ -1697,7 +1702,7 @@ input[type="*"]::placeholder {
   line-height: 1.5em;
 }
 
-/* line 85, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 89, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .collapse.in {
   -webkit-transition: 500ms ease-in-out;
   -moz-transition: 500ms ease-in-out;
@@ -1706,7 +1711,7 @@ input[type="*"]::placeholder {
   transition: 500ms ease-in-out;
 }
 
-/* line 89, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 93, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .collapsing {
   -webkit-transition: 500ms ease-in-out;
   -moz-transition: 500ms ease-in-out;
@@ -1715,20 +1720,20 @@ input[type="*"]::placeholder {
   transition: 500ms ease-in-out;
 }
 
-/* line 96, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 100, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .kanban-task p {
   margin-bottom: 0px;
   color: #CECECE;
 }
 
-/* line 99, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 103, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .kanban-task h4 {
   font-size: 14px;
   color: #455A64;
   margin: 0;
 }
 
-/* line 103, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 107, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .kanban-task:hover {
   background-color: #F9F9F9;
   -webkit-transition: 500ms ease-in-out;
@@ -1739,20 +1744,20 @@ input[type="*"]::placeholder {
   cursor: move;
 }
 
-/* line 108, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 112, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .loc-divider {
   margin-top: 7px;
   margin-bottom: 14px;
 }
 
-/* line 112, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 116, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .sec-divider {
   margin-top: -6px;
   margin-bottom: 2px;
   border-top: 2px solid #455A64;
 }
 
-/* line 120, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 124, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .kanban-status-mob {
   position: absolute;
   top: 0;
@@ -1765,7 +1770,7 @@ input[type="*"]::placeholder {
   box-shadow: 0px 1px 5px rgba(204, 197, 185, 0.5);
 }
 
-/* line 132, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 136, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .flex-container {
   display: -webkit-box;
   display: -moz-box;
@@ -1786,7 +1791,7 @@ input[type="*"]::placeholder {
   -ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
-/* line 140, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 144, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .flex-container > * {
   padding-top: 7px;
   -webkit-box-flex: 1 320px;
@@ -1800,12 +1805,12 @@ input[type="*"]::placeholder {
      }*/
 }
 
-/* line 145, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 149, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .flex-container > *:nth-last-child(1) {
   margin-right: 0;
 }
 
-/* line 150, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 154, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .flex-container-col {
   -webkit-flex-flow: column nowrap;
   -moz-flex-flow: column nowrap;
@@ -1814,7 +1819,7 @@ input[type="*"]::placeholder {
   position: relative;
 }
 
-/* line 156, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 160, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .flex-inline {
   display: -webkit-box;
   display: -moz-box;
@@ -1832,7 +1837,7 @@ input[type="*"]::placeholder {
   -ms-flex-pack: space-between;
 }
 
-/* line 161, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 165, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .flex-inline > * {
   -webkit-box-flex: 1 auto;
   -moz-box-flex: 1 auto;
@@ -1841,7 +1846,7 @@ input[type="*"]::placeholder {
   flex: 1 auto;
 }
 
-/* line 165, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 169, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .flex-inline > li:nth-child(2) {
   -webkit-box-flex: 0 auto;
   -moz-box-flex: 0 auto;
@@ -1850,7 +1855,7 @@ input[type="*"]::placeholder {
   flex: 0 auto;
 }
 
-/* line 167, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
+/* line 171, D:/Realtair/Realtair.UI/scss/modules/_blocks.scss */
 .flex-inline > li:nth-child(2) > a > i {
   margin-left: 10px;
 }
